# falling-sand-algorithm

./: CMakeLists.txt  README.md  falling-sand-algorithm.cpp  falling-sand-algorithm.sln  falling-sand-algorithm.vcxproj  falling-sand-algorithm.vcxproj.filters  in.txt  particle.h  state.cpp  state.h
Debug/: falling-sand-algorithm.exe.recipe  falling-sand-algorithm.ilk  falling-sand-algorithm.obj.enc  falling-sand-algorithm.vcxproj.FileListAbsolute.txt  vc143.idb
Debug/falling-.bc90bfb5.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  falling-sand-algorithm.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
includes/: constants.hpp
src/: main.cpp  state.cpp
x64/Debug/: falling-sand-algorithm.exe.recipe  falling-sand-algorithm.ilk  falling-sand-algorithm.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/falling-.bc90bfb5.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  falling-sand-algorithm.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
